# lab2.2

./: .gitignore  CMakeLists.txt  main.cpp
headers/: algorithms.hpp  array.hpp  arraysequence.hpp  bit.hpp  bitsequence.hpp  exceptions.h  list.hpp  listsequence.hpp  sequence.hpp
tests/: fixtures.hpp  test_array.cpp  test_array_sequence.cpp  test_bit.cpp  test_bit_sequence.cpp  test_list.cpp  test_list_sequence.cpp  test_main.cpp
